# Prototype

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Notebooks/: 01_data_preparation.ipynb  02_rq1_descriptive_analysis.ipynb  03_ground_truth_annotation.ipynb  04_rq2_detection_metrics.ipynb  05_mitigation_evaluation.ipynb  06_interview_analysis_updated.ipynb  DataCollection.ipynb  patch_distribution_analysis.ipynb  similarity_ast_detection_analysis.ipynb
Notebooks/data/: Patch_Manual_Evaluation.xlsx  evaluation_base.csv  evaluation_labeled.csv  interview_response_filled.xlsx  manual_human_labels.csv
Streamlit app/: app_main.py  ui_templates.py
Streamlit app/audit_records/20251219_141453_CWE-020_author_1/: 20251219_151500_metrics.html  20251219_151500_static.json  3way_overlap_evolution_20251219_151500.html  audit_20251219_151500.json  summary_report_20251219_151500.html
Streamlit app/audit_records/20251219_142643_CWE-020_author_2/: audit_20251219_152650.json
Streamlit app/audit_records/20251219_144521_CWE-022_author_1/: 20251219_154533_metrics.html  20251219_154533_patch.json  20251219_154533_patch_diff.txt  20251219_154533_patch_iteration_1.py  20251219_154533_patch_iteration_2.py  20251219_154533_static.json  (+3 more)
Streamlit app/services/: __init__.py  audit_manager.py  cwe_fetcher.py  openai_client_wrapper.py  security_eval_loader.py
backend/: README.md  __init__.py  explainability.py  metrics.py  patching.py  preprocessing.py  reporting.py  requirements.txt  static_analysis.py  test_backend.py  vuln_detection.py  workflow.py
(+293 files in other folders)
