[project]
name = "prototype"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincy",email = "vinz96veiko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit (>=1.8.6,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "openai (>=2.7.2,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "scipy (>=1.14.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[poetry]
package-mode = false